Fixed alignment issues on UI

--- a/src/web/app/components/question-types/question-edit-details-form/mcq-question-edit-details-form.component.scss
+++ b/src/web/app/components/question-types/question-edit-details-form/mcq-question-edit-details-form.component.scss
@@ -28,3 +28,7 @@
 .margin-top-135px {
   margin-top: 135px;
 }
+
+.margin-top-12px {
+  margin-top: 12px;
+}
